<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        style="@style/Theme.SleepCycleAlarm.InfoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sleep_now_card_info_title"
                android:textColor="@color/colorTextPrimaryNegative"
                android:textSize="@dimen/textBody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_now_card_info_summary"
                android:textColor="@color/colorTextSecondaryNegative"
                android:textSize="@dimen/textBody2" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.github.ajay.simplealarms.view.EmptyRecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_marginTop="85dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/empty_view_text"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginEnd="@dimen/fab_margin_default"
        android:layout_marginRight="@dimen/fab_margin_default"
        android:layout_marginBottom="@dimen/fab_margin_default"
        app:srcCompat="@drawable/ic_alarm_white_24dp"
        app:fabSize="auto"/>

</android.support.design.widget.CoordinatorLayout>